--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h1>Welcome to My Portfolio</h1>
         <p>Hi, I'm Mani Deepika, a passionate front-end web developer. Explore my work and get in touch!</p>
         
-        <a href="file:///F:/DEEPIKA/html%20css%20js%20practise/projecthtml.html" 
+        <a href="portfolio.html" 
    class="btn">Enter into Portfolio</a>
 
     </div>
