--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,9 @@
             <button id="buttton"><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/randomjoke.html" style="text-decoration: none; color: black;">view Project</a> </button>
         </div>
         <div class="project">
-            <h3>Currency Converter</h3>
-            <p>allows for the quick conversion of any currency into any other currency</p>
-            <button><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/currencyconverter.html" style="text-decoration: none; color: black;">View Project</a></button>
+            <h3>Recipe finder</h3>
+            <p>Recipe Finder Website is a user-friendly web application that helps users discover various recipes based on ingredients they have or specific dishes they want to make</p>
+            <button><a href="recipefinder.html">View Project</a></button>
         </div>
         <div class="project">
             <h3>NASA APOD</h3>
