--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         <div class="project">
             <h3>Random joke Generator</h3>
             <p>Generates random joke on a click</p>
-            <button id="buttton"><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/randomjoke.html" style="text-decoration: none; color: black;">view Project</a> </button>
+            <button id="buttton"><a href="https://manideepika07.github.io/randomjoke/" style="text-decoration: none; color: black;">view Project</a> </button>
         </div>
         <div class="project">
             <h3>Recipe finder</h3>
