--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
         <div class="project">
             <h3>Recipe finder</h3>
             <p>Recipe Finder Website is a user-friendly web application that helps users discover various recipes based on ingredients they have or specific dishes they want to make</p>
-            <button><a href="recipefinder.html">View Project</a></button>
+            <button><a href="recipefinder.html" style="text-decoration: none; color: black;">View Project</a></button>
         </div>
         <div class="project">
             <h3>NASA APOD</h3>
