--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,12 @@
         <div class="project">
           <h3>Notes taking web app</h3>
           <p>A Notes-Taking Web App allows users to jot down important information, categorize notes.</p>
-          <button><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/notesstakingwebapp.html" style="text-decoration: none; color: black;">View Project</a></button>
+          <button><a href="https://manideepika07.github.io/notesweb/" style="text-decoration: none; color: black;">View Project</a></button>
         </div>
         <div class="project">
           <h3>Expense Tracker</h3>
           <p>a website which tracks daily Expenses</p>
-          <button><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/expensetracker.html" style="text-decoration: none; color: black;">View Project</a></button>
+          <button><a href="https://manideepika07.github.io/expensetracker/" style="text-decoration: none; color: black;">View Project</a></button>
         </div>
         <div class="project">
             <h3>Random joke Generator</h3>
