--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <div class="project">
           <h3>Portfolio Website</h3>
           <p>A modern and elegant portfolio showcasing my skills and projects.</p>
-          <button><a href="file:///F:/DEEPIKA/html%20css%20js%20practise/projecthtml.html" style="text-decoration: none; color: black;">View Project</a> </button>
+          <button><a href="https://manideepika07.github.io/portfolio/" style="text-decoration: none; color: black;">View Project</a> </button>
         </div>
         <div class="project">
           <h3>Notes taking web app</h3>
@@ -58,12 +58,12 @@
         <div class="project">
             <h3>Recipe finder</h3>
             <p>Recipe Finder Website is a user-friendly web application that helps users discover various recipes based on ingredients they have or specific dishes they want to make</p>
-            <button><a href="recipefinder.html" style="text-decoration: none; color: black;">View Project</a></button>
+            <button><a href="https://manideepika07.github.io/recipefinder/" style="text-decoration: none; color: black;">View Project</a></button>
         </div>
         <div class="project">
             <h3>NASA APOD</h3>
             <p>Each day a different image or photograph of our universe is featured, along with a brief explanation written by a professional astronomer</p>
-            <button><a href="file:///F:/DEEPIKA/htmlcode/html%20code.html/project.html/portfolio/NASA.html" style="text-decoration: none; color: black;">View Project</a></button>
+            <button><a href="https://manideepika07.github.io/nasa/" style="text-decoration: none; color: black;">View Project</a></button>
         </div>
       </div>
     </section>
