--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,8 @@
 <body>
   <header>
     <nav>
+       <input type="checkbox" id="menu-toggle" style="display: none;">  <label for="menu-toggle" class="menu-toggle">&#9776;</label>  
+      <div class="nav-links">   
       <ul>
         <li><a href="#about" class="nav">About</a></li>
         <li><a href="#projects" class="nav">Projects</a></li>
